# ppg-microvascular-feasibility-mimic

./: .env.example  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: README.md
manuscript/: README.md  references.bib
manuscript/tex/: manuscript.tex
prompts/: vbeatcrt_inspection_system.txt  vbeatcrt_inspection_user.txt  vmayer_inspection_system.txt  vmayer_inspection_user.txt
results/: README.md
scripts/: 42_run_medgemma_vmayer.py  43_run_medgemma_vbeatcrt.py  README.md  README_medgemma.md  stamp_prompt_sha.py
src/ppgfeas/: __init__.py  _seed.py
src/ppgfeas/analysis/: __init__.py
src/ppgfeas/cohort/: __init__.py
src/ppgfeas/llm/: __init__.py  inspect.py
src/ppgfeas/signal/: __init__.py
tests/: test_inspect_parser.py  test_prompt_sha.py  test_seed.py
