[project]
name = "ppgfeas"
version = "0.1.0"
description = "Feasibility evaluation of three photoplethysmography-derived microvascular reactivity signals in MIMIC-IV-WDB, with AI-assisted morphology inspection"
authors = [{ name = "Thomas C. Landry, MD" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "polars>=1.0",
    "pandas>=2.0",
    "wfdb>=4.1",
    "matplotlib>=3.8",
    "loguru>=0.7",
    "neurokit2>=0.2.7",
]

[project.optional-dependencies]
# Local-LLM step (MedGemma served by oMLX, OpenAI-compatible). Users run their own server.
llm = ["openai>=1.0", "python-dotenv>=1.0", "Pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.6", "hypothesis>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppgfeas"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "scripts", "tests"]
pythonVersion = "3.11"
